<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="horizontal"
    android:padding="12dp"
    android:weightSum="1"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_name"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_1jug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:minWidth="140dp"
            android:minHeight="48dp"
            android:text="@string/un_jugador"
            android:textSize="18sp"
            android:onClick="aJugar"/>

        <RadioGroup
            android:id="@+id/configD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtn_facil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:textColor="@color/white"
                android:text="@string/facil"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rdbtn_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:textColor="@color/white"
                android:text="@string/normal"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rdbtn_imposible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:textColor="@color/white"
                android:text="@string/imposible"
                android:textSize="12sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_2jug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:minWidth="140dp"
            android:minHeight="48dp"
            android:backgroundTint="#494949"
            android:text="@string/dos_jugadores"
            android:textSize="18sp"
            android:onClick="aJugar" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.2" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/casilla" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/casilla" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/cross" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/casilla" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/casilla" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/cross" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:src="@drawable/casilla" />
    </GridLayout>

</LinearLayout>


